--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = 'biodata'>
-        <img class="profile-image" src="yor.jpg" alt="">
+        <img class="profile-image" src="Joko.jpeg" alt="">
         <div class="nama">
             <h1>Joko Aiko Ponco Wicaksono</h1>
             <h4>SMK Negeri 2 Singosari</h4>
@@ -38,7 +38,7 @@
             <p>Jurnalis</p>
             <hr>    
             <h3>Motto</h3>
-            <p>"Ikuti Arus Terus Terusan"</p>
+            <p>"Jalani Selagi Bisa"</p>
             <hr>
         </div>
         <div class="riwayat-sekolah">
